--- a/style.css
+++ b/style.css
@@ -21,6 +21,10 @@ textarea{
   border-bottom: 10px solid black;
 }
 
+.container {
+  font-size: 20px;
+}
+
 .description{
   white-space: pre-wrap;
 }
@@ -65,9 +69,10 @@ textarea{
   border-bottom-right-radius: 15px;
   background-color: #06AED5;
   color: white;
+  padding: 15px;
 }
 
-.saveBtn i:hover {
-  font-size: 20px;
+.saveBtn:hover {
+  font-size: 30px;
   transition: all .3s ease-in-out;
 }
