--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ textarea{
   padding: 10px;
 }
 
+h3 {
+  padding: 20px;
+  text-align: right;
+}
+
 .jumbotron {
   text-align: center;
   background-color: transparent;
@@ -23,29 +28,30 @@ textarea{
 
 .container {
   font-size: 20px;
+  padding-bottom: 50px;
 }
 
 .description{
   white-space: pre-wrap;
 }
 
+.schedule-block{
+  float: left;
+  width: 75%;
+}
+
 .time-block{
   text-align: center;
-  border-radius: 15px;
-  display: flex;
-  justify-content: space-between;
+  height: 80px;
 }
 
 .row {
   white-space: pre-wrap;
-  height: 80px;
-  border-top: 1px solid white;;
-}
-
-.hour {
-  background-color: #ffffff;
-  color: #000000;
-  border-top: 1px dashed #000000;
+  height: 100px;
+  border-top: 1px solid rgb(160, 150, 150);
+  border-bottom: 1px solid rgb(160, 150, 150);
+  margin: 10px;
+  padding-top: 10px;
 }
 
 .past {
@@ -64,12 +70,14 @@ textarea{
 }
 
 .saveBtn {
-  border-left: 1px solid black;
-  border-top-right-radius: 15px;
-  border-bottom-right-radius: 15px;
+  border-left: 1px solid rgb(160, 150, 150);
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
   background-color: #06AED5;
   color: white;
+  height: 80px;
   padding: 15px;
+  padding-top: 25px;
 }
 
 .saveBtn:hover {
