--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ h3 {
 
 .jumbotron {
   text-align: center;
-  background-color: transparent;
+  background-color: white;
   color: black;
   border-radius: 0;
   border-bottom: 10px solid black;
@@ -28,6 +28,7 @@ h3 {
 
 .container {
   font-size: 20px;
+  margin-top: 15em;
   padding-bottom: 50px;
 }
 
